tree-sitter-polar/test/corpus/function_tests.txt
===
Simple Function Definition
===

fn main() {}

---

(source_file
  (function_item
    name: (identifier)
    parameters: (parameters)
    body: (block)))

===
Full Function Example
===

fn test (
    clk: clock,
    a: u8 @ clk
) -> u8 @ clk {
    let c : u8 @ clk = a + b;
    return c.flipflop();
}

---

(source_file
  (function_item
    name: (identifier)
    parameters: (parameters
      (parameter name: (identifier) type: (type base_type: (type_identifier)))
      (parameter name: (identifier) type: (type base_type: (type_identifier) domain_tag: (domain_tag name: (identifier)))))
    return_type: (type base_type: (type_identifier) domain_tag: (domain_tag name: (identifier)))
    body: (block
      (let_declaration
        name: (identifier)
        type: (type base_type: (type_identifier) domain_tag: (domain_tag name: (identifier)))
        initializer: (binary_expression left: (identifier) operator: (operator_identifier)  right: (identifier)))
      (return_statement
        value: (call_expression
          function: (field_expression object: (identifier) field: (identifier)))))))
